@@ -1,5 +1,8 @@
 {{$NEXT}}
 
+ - export-netvis: export Dualstack-Address of network
+   in field Address2 of node.
+
 6.079     2025-03-17 12:53:54+01:00 Europe/Berlin
 
  - If service has some owner with name "DA_*",
